Added some structure to landing page (issue #10) Also connecting to twitter with twitter_test.py in hopes to make a dent in (issue #9)

--- a/web/main.html
+++ b/web/main.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
-
+	<div id="container">
+		<div id="content1">
+			<header id="titleBlock">
+				<h1>Public Market</h1>
+				<h2 class="notMobile">"The Freshest Place in Rochester"</h2>
+			</header>
+			<div id="statusBlock">
+			<h3>The Public Market is Closed</h3>
+			</div>
+		
 {% block body %}{% endblock %}
 
+		</div>
+		<div id="content2">
+			<script type="text/javascript" src="market.php" defer="defer"></script>
+		</div>
+		<footer class="notMobile">
+			Public Market App | 2014
+		</footer>
+	</div>
+</body>
+	</div>
 </body>
