--- a/web/main.html
+++ b/web/main.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="styles/main.css" type="text/css" media="screen" />
 	<link rel='stylesheet' media='screen and (max-device-width: 480px)' href='styles/mobile.css' type='text/css' />
 	<meta name="viewport" content="width=device-width, initial scale=1, maximum-scale=1, user-scalable=0"/>
+	<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
 </head>
 
 <body>
