--- a/web/main.html
+++ b/web/main.html
@@ -2,10 +2,12 @@
 
 <head>
 	<title>Welcome to the Public Market Web App</title>
+	<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="styles/main.css" type="text/css" media="screen" />
 	<link rel='stylesheet' media='screen and (max-device-width: 480px)' href='styles/mobile.css' type='text/css' />
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 	<meta name="viewport" content="width=device-width, initial scale=1, maximum-scale=1, user-scalable=0"/>
-	<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -22,13 +24,16 @@
 {% block body %}{% endblock %}
 
 		</div>
-		<div id="content2">
-			<script type="text/javascript" src="market.php" defer="defer"></script>
-		</div>
+		<div id="map"></div>
+		<script>
+		var map = L.map('map').setView([43.16506,-77.5883], 18);
+		L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a>',
+    maxZoom: 20
+}).addTo(map);
+		</script>
 		<footer class="notMobile">
 			Public Market App | 2014
 		</footer>
-	</div>
-</body>
 	</div>
 </body>
