--- a/web/main.html
+++ b/web/main.html
@@ -25,13 +25,7 @@
 
 		</div>
 		<div id="map"></div>
-		<script>
-		var map = L.map('map').setView([43.16506,-77.5883], 18);
-		L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a>',
-    maxZoom: 20
-}).addTo(map);
-		</script>
+		<script src="js/map.js" type="text/javascript"></script>
 		<footer class="notMobile">
 			Public Market App | 2014
 		</footer>
