--- a/web/admin.html
+++ b/web/admin.html
@@ -7,37 +7,33 @@ You are now in the admin page.
 </p>
 <br>
 
-<script type=text/javascript>
-  $(function() {
-    $('a#submit').bind('click', function() {
-      $.getJSON('/admin/_add_vendor', {
-        name: $('input[name="name"]').val(),
-        tagline: $('input[name="tagline"]').val(),
-        twitterhandle: $('input[name="handle"]').val()
-      }, function(data) {
-        $("#result").text(data.result);
-      });
-      return false;
-    });
-  });
-</script>
-<!--
-<script type=text/javascript>
-  $(function() {
-    $('a#consume').bind('click', function() {
-			$.get( "/admin/_consume_tweets", function( data ) {
-				alert( data );
-			});
-      return false;
-    });
-  });
-</script>-->
+<div id="adminMenu" class="meAdmin">
+	<a href=# id="merchant_list">View Merchant List</a><br>
+	<a href=# id="merchant_menu">Add a new Merchant</a><br>
+	<a href=# id="category_menu">Add a new Category</a><br>	
+</div>
 
-Name:<input type="text" name="name"></input><br>
-Tagline:<input type="text" name="tagline"><br>
-Twitter Handle:<input type="text" name="handle"><br>
-<a href=# id=submit>Submit New Merchant</a><br><br>
-<!--<a href=# id=consume>Munch on Some Tweets</a>-->
-<span id="result"></span>
+<div id="listMerchant" class="meAdmin">
+	<h3>Current Merchants:<h3>
+	<ul id="list">
+	</ul>
+</div>
+
+<div id="newMerchant" class="meAdmin">
+	Name:<input type="text" name="name"></input><br>
+	Tagline:<input type="text" name="tagline"><br>
+	Twitter Handle:<input type="text" name="handle"><br>
+	<a href=# id="submit">Submit New Merchant</a><br><br>
+	<span id="result"></span>
+</div>
+
+<div id="newCategory" class="meAdmin">
+	Category Name: <input type="text" name="catname"></input>
+	Icon: <input type="file" name="icon"></input>
+</div>
+<br>
+<a href=# id="back">Back</a>
+
+<script src="js/admin.js" type="text/javascript"></script>
 
 {% endblock %}
