Added landing page tweets and a 'show more' button

--- a/web/landing.html
+++ b/web/landing.html
@@ -5,5 +5,9 @@
 <p>
 You are now on the main page.
 </p>
+<ul id="statusList">
+<li style="display: none">First</li>
+</ul>
+<script src="js/tweets.js"></script>
 
 {% endblock %}
