where I'm at at crunch time

--- a/web/admin.html
+++ b/web/admin.html
@@ -31,6 +31,7 @@ You are now in the admin page.
 	Name:<input type="text" name="merchname"></input><br>
 	Tagline:<input type="text" name="merchtag"><br>
 	Twitter Handle:<input type="text" name="merchhand"><br>
+	Category:<select name="catdrop"></select><br>
 	<a href=# id="merchsubmit" class="button">Submit</a><br><br>
 	<span id="merchreturn"></span>
 </div>
@@ -41,7 +42,7 @@ You are now in the admin page.
 	<div id="catpic"></div>
 	<form action="catform" method="post" id="catform" enctype="multipart/form-data">
 		Name: <input type="text" name="catname" style="width:10"><br>
-		File:<input type="file" name="caticon" id='caticon'><br>
+		Icon:<input type="file" name="caticon" id='caticon'><br>
 	</form>
 	<a href=# id="catsubmit" class="button">Submit</a>
 	<span id="catreturn"></span>
