--- a/web/landing.html
+++ b/web/landing.html
@@ -2,12 +2,11 @@
 
 {% block body %}
 
-<p>
-You are now on the main page.
-</p>
+<div id='shoutBlock'>
 <ul id="statusList">
 <li style="display: none">First</li>
 </ul>
+</div>
+<script src="js/merchantpage.js"></script>
 <script src="js/tweets.js"></script>
-
 {% endblock %}
