--- a/web/main.html
+++ b/web/main.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Welcome to the Public Market Web App</title>
 	<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
+	<script src="js/pubmark.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="styles/main.css" type="text/css" media="screen" />
 	<link rel='stylesheet' media='screen and (max-device-width: 480px)' href='styles/mobile.css' type='text/css' />
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
@@ -15,7 +16,6 @@
 		<div id="content1">
 			<header id="titleBlock">
 				<h1>Public Market</h1>
-				<h2 class="notMobile">"The Freshest Place in Rochester"</h2>
 			</header>
 			<div id="statusBlock">
 			<h3>The Public Market is Closed</h3>
