Almost Submission Time

--- a/web/admin.html
+++ b/web/admin.html
@@ -48,7 +48,7 @@ You are now in the admin page.
 	<span id="catreturn"></span>
 </div>
 <br>
-<a href=# id="back" class="button">Back</a>
+<a href=# id="back" class="button back">Back</a>
 
 <script src="js/admin.js" type="text/javascript"></script>
 
