--- a/web/main.html
+++ b/web/main.html
@@ -27,7 +27,7 @@
 		<div id="map"></div>
 		<script src="js/map.js" type="text/javascript"></script>
 		<footer class="notMobile">
-			Public Market App | 2014
+			Public Market App | 2014 | <a href="http://github.com/makersauce/pubmark">Project Github</a>
 		</footer>
 	</div>
 </body>
