--- a/web/main.html
+++ b/web/main.html
@@ -15,7 +15,9 @@
 	<div id="container">
 		<div id="content1">
 			<header id="titleBlock">
-				<h1>Public Market</h1>
+				<h1>
+				<a href="http://github.com/makersauce/pubmark" target="_blank">Public Market</a>
+				</h1>
 			</header>
 			<div id="statusBlock">
 			<h3>The Public Market is Closed</h3>
